# deep-learning-notebooks

./: .gitignore  01_neurons_and_networks.py  02_training_deep_networks.py  03_convolutional_networks.py  04_sequence_models.py  05_attention_mechanism.py  06_transformer_architecture.py  07_language_models.py  08_modern_llm_techniques.py  09_text_preprocessing_and_bag_of_words.py  10_embedding_based_text_representation.py  README.md  main.py  pyproject.toml
docs/superpowers/specs/: 2026-04-07-deep-learning-marimo-notebooks-design.md
utils/: viz.py
