[project]
name = "deep-learning-notebooks"
version = "0.1.0"
description = "Interactive marimo notebooks for learning deep learning and LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.13.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "scikit-learn>=1.3.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "peft>=0.5.0",
    "sentence-transformers>=2.2.0",
    "umap-learn>=0.5.0",
]

[project.scripts]
deep-learning-notebooks = "main:main"
